--- a/smetro/package.json
+++ b/smetro/package.json
@@ -19,6 +19,8 @@
     "express-flash": "^0.0.2",
     "express-session": "^1.17.3",
     "fs": "^0.0.1-security",
+    "imageviewer": "^1.1.0",
+    "jquery": "^3.6.4",
     "nodemailer": "^6.9.1",
     "nodemon": "^2.0.20",
     "passport": "^0.6.0",
