--- a/.gitignore
+++ b/.gitignore
@@ -125,3 +125,7 @@ dist
 .yarn/build-state.yml
 .yarn/install-state.gz
 .pnp.*
+smetro/public/img/qr.png
+smetro/server.js
+smetro/public/img/qr.png
+smetro/public/img/qr.png
