--- a/smetro/package.json
+++ b/smetro/package.json
@@ -23,6 +23,7 @@
     "imageviewer": "^1.1.0",
     "jquery": "^3.6.4",
     "jsqr": "^1.4.0",
+    "mdb-ui-kit": "^6.3.0",
     "node-webcam": "^0.8.1",
     "nodemailer": "^6.9.1",
     "nodemon": "^2.0.20",
